<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <color name="white">#FFFFFF</color>

    <string name="app_name">Horeca</string>
    <string name="title_Profile">Profile</string>
    <string name="Change_psw">Change Password</string>
    <string name="title_sign_in">Sign in</string>
    <string name="title_sign_up">Sign up</string>
    <string name="mail"><b>Email address:</b></string>
    <string name="mail_taken">Email already taken</string>
    <string name="wrong_password_confirmation">Passwords do not match</string>
    <string name="unused_email">There is no user with this email</string>
    <string name="mot_de_passe"><b>Password:</b></string>
    <string name="ancien_mdp"><b>Password :</b></string>
    <string name="nouveau_mdp"><b>New password :</b></string>
    <string name="title_addnumtel">Telephone nubmer</string>
    <string name="title_changepss">Change password</string>
    <string name="password_confirmation"><b>Password confirmation</b></string>
    <string name="wrong_password">Wrong password.</string>
    <string name="sign_in_button">Sign in</string>
    <string name="sign_up_button">Sign up</string>
    <string name="action_signUp">Sign up</string>
    <string name="action_signIn">Sign in</string>
    <string name="action_signOut">Sign out</string>
    <string name="action_profile">Profile</string>
    <string name="number"><b>Number :</b></string>
    <string name="change_number">Change phone number</string>
    <string name="add_number">Add phone number</string>
    
    <string name="button_choose_horeca">Search for a restaurant</string>
    <string name="title_activity_horeca_list">Restaurants in %1$s</string>
    <string name="ville_spinner_label"><b>City:</b></string>
    <string name="ville_prompt">City:</string>
    <string name="horecatype_label"><b>Restaurant type*:</b></string>
    <string name="horecatype_placeholder">Any type</string>
    <string name="horecatype_prompt">Restaurant type:</string>
    <string name="plattype_label"><b>Dish type*:</b></string>
    <string name="plattype_placeholder">Any type</string>
    <string name="plattype_prompt">Dish type:</string>
    <string name="ingredient_label"><b>Specific ingredient*:</b></string>
    <string name="price_min_label"><b>Price min [€]*:</b></string>
    <string name="invalid_price_min_warning">Invalid price min, leave it empty for no distance max.</string>
    <string name="price_max_label"><b>Price max [€]*:</b></string>
    <string name="invalid_price_max_warning">Invalid price max, leave it empty for no distance max.</string>
    <string name="distance_max_label"><b>Distance max [m]*:</b></string>
    <string name="invalid_distance_max_warning">Invalid distance max, leave it empty for no distance max.</string>
    <string name="asterics_explanation">* Optional</string>
    
    <string name="presentation_tab">Presentation</string>
    <string name="menu_tab">Menu</string>
    <string name="picture_tab">Picture</string>
    <string name="label_tab">Label</string>
    <string name="book_tab">Book</string>
    
    <string name="gps_warning">GPS coordinate could not be fetched.</string>
    <string name="horeca_list_message">Pick a restaurant</string>
    <string name="horeca_distance_label"><b>Distance: </b></string>
    <string name="horeca_numtel_label"><b>Phone number: </b></string>
    <string name="horeca_horaire_label"><b>Open hours:</b></string>
    <string name="horeca_description_label"><b>Description:</b></string>
    <string name="horeca_favorite_description"><b>Is this restaurant one of your favorite?</b></string>
    
    <string name="plat_price_label"><b>Price: </b></string>
    <string name="plat_price_currency"> €</string>
    <string name="plat_description_label"><b>Description:</b></string>
    <string name="plat_stock_label"><b>Stock: </b></string>
    <string name="plat_stock_unknown">unknown</string>
    <string name="plat_ingredients_label"><b>Ingredients:</b></string>
    <string name="plat_ingredients_none">No ingredient.</string>
    <string name="plat_is_favorite"><b>Is favorite:</b></string>
    <string name="plat_favorite_description"><b>Is this plat one of your favorite?</b></string>
    <string name="menu"><b>Menu:</b></string>
    <string name="horaire"><b>Choose your slot:</b></string>
    <string name="title_activity_ouverture">Opening</string>
    <string name="ouverture_debut_label"><b>From:</b></string>
    <string name="ouverture_fin_label"><b>To:</b></string>
    <string name="ouverture_places_label"><b>Places left: </b></string>
    <string name="reservation_number_label"><b>Amount: </b></string>
    <string name="default_reservation_number">1</string>
    <string name="reservation_button_new_label">Book</string>
    <string name="reservation_button_update_label">Update booking</string>
    <string name="current_reservation_number_label"><b>Current: </b></string>
    <string name="delete_reservation_button_label">Delete booking</string>
    <string name="commande_nombre_label"><b>Amount: </b></string>
    <string name="default_commande_nombre">1</string>
    <string name="commande_button_label">Order</string>
    <string name="current_commandes_button_label">Current orders</string>
    <string name="commandes_list_label"><b>Orders (click to delete):</b></string>
    <string name="title_activity_commandes">CommandesActivity</string>
    <string name="invalid_amount_warning">Invalid amount</string>
    <string name="used_command_date">You have already made an order for this date.</string>
    <string name="horeca_is_favorite"><b>Is favorite:</b></string>
    <string name="name"><b>Name</b></string>
    <string name="address"><b>Address:</b></string>
    <string name="change_pass_button">Change password</string>

</resources>
