<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
   	<LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
	    
	    <TextView
	        android:text="@string/ancien_mdp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/simple_text" />
	    <EditText
	        android:id="@+id/ancien_mdp"
	        android:inputType="textPassword"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/simple_text" />
	    <TextView
	        android:textIsSelectable="true"
	        android:id="@+id/password_err2"
	        android:visibility="gone"
	    	android:text="@string/wrong_password"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/error_text" />
	    <TextView
	        android:text="@string/nouveau_mdp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/simple_text" />
	    <EditText
	        android:id="@+id/nouveau_mdp"
	        android:inputType="textPassword"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/simple_text" />
	    <TextView
	        android:text="@string/password_confirmation"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/simple_text" />
	    <EditText
	        android:id="@+id/password_confirmation"
	        android:inputType="textPassword"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/simple_text" />
	    <TextView
	        android:textIsSelectable="true"
	        android:id="@+id/password_err"
	        android:visibility="gone"
	    	android:text="@string/wrong_password_confirmation"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/error_text" />
	    <Button
	        android:id="@+id/change_pass_button"
	        android:text="@string/change_pass_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/simple_text"/>
	    
	   </LinearLayout>
</ScrollView>