<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
   	<LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
	    
	    <TextView
	        android:text="@string/mail"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/simple_text" />
	    <EditText
	        android:id="@+id/mail"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/simple_text" />
	    <TextView
	        android:text="@string/mot_de_passe"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/simple_text" />
	    <EditText
	        android:id="@+id/mot_de_passe"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/simple_text" />
	    <Button
	        android:id="@+id/sign_in_button"
	        android:text="@string/sign_in_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/simple_text"/>
	</LinearLayout>
</ScrollView>