<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
    	<RelativeLayout
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content" >
	    	<TextView
	    	    android:id="@+id/horeca_distance_label"
	    	    android:text="@string/horeca_distance_label"
	    	    android:textIsSelectable="true"
	       		android:layout_width="wrap_content"
	       		android:layout_height="wrap_content"
	       		android:layout_alignParentLeft="true"
	       		style="@style/simple_text" />
	    	<TextView
	    	    android:id="@+id/horeca_distance"
	    	    android:textIsSelectable="true"
	       		android:layout_width="wrap_content"
	       		android:layout_height="wrap_content"
	       		android:layout_toRightOf="@id/horeca_distance_label"
	       		style="@style/simple_text" />
    	</RelativeLayout>
    	<RelativeLayout
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content" >
	    	<TextView
	    	    android:id="@+id/horeca_numtel_label"
	    	    android:text="@string/horeca_numtel_label"
	    	    android:textIsSelectable="true"
	       		android:layout_width="wrap_content"
	       		android:layout_height="wrap_content"
	       		android:layout_alignParentLeft="true"
	       		style="@style/simple_text" />
	    	<TextView
	    	    android:id="@+id/horeca_numtel"
	    	    android:textIsSelectable="true"
	       		android:layout_width="wrap_content"
	       		android:layout_height="wrap_content"
	       		android:layout_toRightOf="@id/horeca_numtel_label"
	       		style="@style/simple_text" />
    	</RelativeLayout>
    	<TextView
    	    android:id="@+id/horeca_description_label"
    	    android:text="@string/horeca_description_label"
    	    android:textIsSelectable="true"
       		android:layout_width="wrap_content"
       		android:layout_height="wrap_content"
       		style="@style/simple_text" />
    	<TextView
    	    android:id="@+id/horeca_description"
    	    android:textIsSelectable="true"
       		android:layout_width="wrap_content"
       		android:layout_height="wrap_content"
       		style="@style/simple_text" />
    	<TextView
    	    android:id="@+id/horeca_pricerange"
    	    android:textIsSelectable="true"
       		android:layout_width="wrap_content"
       		android:layout_height="wrap_content"
       		style="@style/simple_text" />
    	<LinearLayout
	    	android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >
		    <TextView
	    	    android:id="@+id/horeca_is_favorite"
	    	    android:text="@string/horeca_is_favorite"
	    	    android:textIsSelectable="false"
	       		android:layout_width="wrap_content"
	       		android:layout_height="43dp"
	       		android:textColor="#000000"
	       		android:gravity="bottom"
	       		style="@style/simple_text" />
	    	<ImageButton
	    	    android:contentDescription="favorite"
	    	    android:id="@+id/favorite"
		        android:layout_width="wrap_content"
		        android:layout_height="fill_parent"
		        android:src="@drawable/star_off"
		        android:background="#00ffffff"
		        android:onClick="onToggleStar"/>
    	</LinearLayout>
	</LinearLayout>
</ScrollView>
