<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PlatActivity" >
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >
    	<TextView
    	    android:id="@+id/horeca_name"
    	    android:textIsSelectable="true"
       		android:layout_width="fill_parent"
       		android:layout_height="wrap_content" />
    	<TextView
    	    android:id="@+id/plat_name"
    	    android:textIsSelectable="true"
       		android:layout_width="wrap_content"
       		android:layout_height="wrap_content" />
    	<TextView
    	    android:id="@+id/plat_description_label"
    	    android:text="@string/plat_description_label"
    	    android:textIsSelectable="true"
       		android:layout_width="wrap_content"
       		android:layout_height="wrap_content" />
    	<TextView
    	    android:id="@+id/plat_description"
    	    android:textIsSelectable="true"
       		android:layout_width="wrap_content"
       		android:layout_height="wrap_content" />
    	<RelativeLayout
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content" >
	    	<TextView
	    	    android:id="@+id/plat_stock_label"
	    	    android:text="@string/plat_stock_label"
	    	    android:textIsSelectable="true"
	       		android:layout_width="wrap_content"
	       		android:layout_height="wrap_content"
	       		android:layout_alignParentLeft="true" />
	    	<TextView
	    	    android:id="@+id/plat_stock"
	    	    android:textIsSelectable="true"
	       		android:layout_width="wrap_content"
	       		android:layout_height="wrap_content"
	       		android:layout_toRightOf="@id/plat_stock_label" />
	    	<TextView
	    	    android:text="@string/plat_price_label"
	    	    android:textIsSelectable="true"
	       		android:layout_width="wrap_content"
	       		android:layout_height="wrap_content"
	       		android:layout_toLeftOf="@+id/plat_price" />
	    	<TextView
	    	    android:id="@id/plat_price"
	    	    android:textIsSelectable="true"
	       		android:layout_width="wrap_content"
	       		android:layout_height="wrap_content"
	       		android:layout_alignParentRight="true" />
    	</RelativeLayout>
	</LinearLayout>

</ScrollView>